(fixes 75) remove unnecessary z-index declarations, simplify modal hiding logic, and update zipCode in state whenever component updates

--- a/src/templates/department.css
+++ b/src/templates/department.css
@@ -55,13 +55,11 @@ section {
   position: relative;
   text-align: center;
   color: white;
-  z-index: 1;
 }
 
 .product-card--image {
   width: 100%;
   height: 100%;
-  z-index: 2;
 }
 
 .product-card--image-overlay {
@@ -70,7 +68,6 @@ section {
   width: 100%;
   height: 100%;
   top: 0;
-  z-index: 3;
 }
 
 .product-card--fav-btn {
@@ -85,7 +82,6 @@ section {
   position: absolute;
   top: 8px;
   left: 8px;
-  z-index: 4;
 }
 
 .product-card--fav-btn:hover {
@@ -115,7 +111,7 @@ section {
   right: 0;
   top: 20%;
   text-align: center;
-  z-index: 4;
+  /* z-index: 4; */
   font-family: Bebas Neue, sans-serif;
   line-height: 2.2rem;
 }
@@ -130,7 +126,7 @@ section {
   align-items: center;
   justify-content: center;
   font-family: "fa solid";
-  z-index: 4;
+  /* z-index: 4; */
 }
 
 .product-card--control-btn {
